# algoritm

./: .gitignore  CMakeLists.txt  main.cpp  set.cpp  set.h  tests.cpp  tests.h
lab01/: Functions.h  README.md  UnitTest1.cpp  functions.cpp  main.cpp  sort.cpp  sorting.cpp  sorting.h  tests.cpp
lab02/: README.md  UnitTest1.cpp  main.cpp  setOfStacks.cpp  setOfStacks.h  set_of_stacks.h  stack.cpp  stack.h  test_functions.h
lab03/: CMakeLists.txt  Queue.h  README.md  Tests.cpp  Tests.h  UnitTest1.cpp  UnitTest2.cpp  UnitTest_PriorityQueue.cpp  header.h  list.cpp  list.h  main.cpp  priority_queue.h  queue.cpp  queue.h  tests_priority_queue.cpp  tests_priority_queue.h
lab04/: README.md  UnitTest1.cpp  UnitTest_hash.cpp  hash.cpp  hash.h  hashtable.h  list.h  main.cpp
lab05/: CMakeLists.txt  PolishUnitTest.cpp  README.md  Stack.h  TESTS.cpp  TESTS.h  UnitTest1.cpp  UnitTest_polish.cpp  func.cpp  functions.cpp  functions.h  main.cpp  polish.cpp  polish.h  stack.h  tests.cpp  tests.h
lab06/: CMakeLists.txt  MarkovUnitTest.cpp  README.md  SMatrix.h  Tests.cpp  Tests.h  UnitTest1.cpp  UnitTest_matrix.cpp  main.cpp  matrix.h  myString.cpp  myString.h  sparseMatrix.cpp  sparseMatrix.h
lab07/: README.md  UnitTest1.cpp  UnitTest_markov.cpp  main.cpp  markov.cpp  markov.h  markovAlgorithm.cpp  markovAlgorithm.h
lab08/: Matrix_Test.cpp  README.md  Set.h  Source.cpp  UnitTest1.cpp  UnitTest1_plurall.cpp  main.cpp  plurall.cpp  plurall.h  set.h
lab09/: CMakeLists.txt  Graph.cpp  Graph.h  README.md  Tests.cpp  Tests.h  UnitTest1.cpp  dijkstraAlgorithm.cpp  main.cpp  (+1 more)
(+1261 files in other folders)
